setup home page, home sidebar, fixed spacing on community page sidebar

--- a/src/App.css
+++ b/src/App.css
@@ -120,6 +120,16 @@ nav{
 
 }
 
+.sidebarContent a{
+    text-decoration: none;
+    color: blue;
+    font-size: 20px;
+}
+
+.sidebarHomeCommName{
+    margin-bottom: 10px;
+}
+
 
 /* Post Card */
 
